# Path-tracing-Render-CUDA

./: .clang-format  .clangd  CMakeLists.txt  CONTEXT.md  MASTER_PLAN_CUDA_PATHTRACER.md  ROADMAP.md  compile_commands.json  run.bat
src/: gl_loader.cpp  gl_loader.h  main.cpp  render_kernel.cu  render_kernel.h
src/math/: material.h  ray.h  vec3.h
src/math/hittable/: hittable.h  hittable_list.h  sphere.h
